--- a/lib/generators/solid_queue_autoscaler/templates/README
+++ b/lib/generators/solid_queue_autoscaler/templates/README
@@ -1,6 +1,6 @@
 ===============================================================================
 
-SolidQueueHerokuAutoscaler has been installed!
+SolidQueueAutoscaler has been installed!
 
 Next steps:
 
@@ -10,7 +10,7 @@ Next steps:
 
 2. Run the migration generator for persistent cooldown tracking:
 
-   rails generate solid_queue_heroku_autoscaler:migration
+   rails generate solid_queue_autoscaler:migration
    rails db:migrate
 
 3. Review config/initializers/solid_queue_autoscaler.rb and adjust thresholds
@@ -18,7 +18,7 @@ Next steps:
 4. Add the recurring job to config/recurring.yml:
 
    autoscaler:
-     class: SolidQueueHerokuAutoscaler::AutoscaleJob
+     class: SolidQueueAutoscaler::AutoscaleJob
      queue: autoscaler
      schedule: every 30 seconds
 
@@ -36,6 +36,6 @@ Next steps:
 
 6. Test with dry_run mode before enabling in production
 
-For more information, see: https://github.com/reillyse/solid_queue_heroku_autoscaler
+For more information, see: https://github.com/reillyse/solid_queue_autoscaler
 
 ===============================================================================
